// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/gears/component renders \`forward\` 1`] = `
<Gears
  forward={
    {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
  pattern="/:alpha/:omega"
  reverse={{}}
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` 1`] = `
<Gears
  forward={{}}
  pattern="/:alpha/:omega"
  reverse={
    {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/gears/component renders \`reverse\` and \`forward\` 1`] = `
<Gears
  forward={
    {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
  pattern="/:alpha/:omega"
  reverse={
    {
      "alpha": "MOCK ALPHA",
      "omega": "MOCK OMEGA",
    }
  }
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/gears/component renders 1`] = `
<Gears
  forward={{}}
  pattern="/:alpha/:omega"
  reverse={{}}
/>
`;
